tests/src/snapshots/pluma_tests__parse_success__chain_call_multiple_parts.snap
---
source: tests/src/parse_success.rs
expression: "\"hello\" . replace \"x\" with \"y\""
---

=== Source ===
"hello" . replace "x" with "y"

=== Tokens ===
[
    StringLiteral(
        1,
        6,
    ),
    Dot(
        8,
        9,
    ),
    Identifier(
        10,
        17,
    ),
    StringLiteral(
        19,
        20,
    ),
    Identifier(
        22,
        26,
    ),
    StringLiteral(
        28,
        29,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        1,
        29,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                1,
                29,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        1,
                        29,
                    ),
                    kind: Call(
                        CallNode {
                            pos: (
                                1,
                                29,
                            ),
                            callee: ExprNode {
                                pos: (
                                    1,
                                    17,
                                ),
                                kind: Chain {
                                    receiver: ExprNode {
                                        pos: (
                                            1,
                                            6,
                                        ),
                                        kind: Literal(
                                            LiteralNode {
                                                pos: (
                                                    1,
                                                    6,
                                                ),
                                                kind: Str(
                                                    "hello",
                                                ),
                                                typ: Unknown,
                                            },
                                        ),
                                        typ: Unknown,
                                    },
                                    prop: ExprNode {
                                        pos: (
                                            10,
                                            26,
                                        ),
                                        kind: MultiPartIdentifier(
                                            [
                                                IdentifierNode {
                                                    pos: (
                                                        10,
                                                        17,
                                                    ),
                                                    name: "replace",
                                                    typ: Unknown,
                                                },
                                                IdentifierNode {
                                                    pos: (
                                                        22,
                                                        26,
                                                    ),
                                                    name: "with",
                                                    typ: Unknown,
                                                },
                                            ],
                                        ),
                                        typ: Unknown,
                                    },
                                },
                                typ: Unknown,
                            },
                            args: [
                                ExprNode {
                                    pos: (
                                        19,
                                        20,
                                    ),
                                    kind: Literal(
                                        LiteralNode {
                                            pos: (
                                                19,
                                                20,
                                            ),
                                            kind: Str(
                                                "x",
                                            ),
                                            typ: Unknown,
                                        },
                                    ),
                                    typ: Unknown,
                                },
                                ExprNode {
                                    pos: (
                                        28,
                                        29,
                                    ),
                                    kind: Literal(
                                        LiteralNode {
                                            pos: (
                                                28,
                                                29,
                                            ),
                                            kind: Str(
                                                "y",
                                            ),
                                            typ: Unknown,
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ],
                            typ: Unknown,
                        },
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

