tests/src/snapshots/pluma_tests__parse_success__chain_calls_across_lines.snap
---
source: tests/src/parse_success.rs
expression: "\"hello\"\n  . f1 1\n  .f2 2"
---

=== Source ===
"hello"
  . f1 1
  .f2 2

=== Tokens ===
[
    StringLiteral(
        1,
        6,
    ),
    LineBreak(
        7,
        8,
    ),
    Dot(
        10,
        11,
    ),
    Identifier(
        12,
        14,
    ),
    DecimalDigits(
        15,
        16,
    ),
    LineBreak(
        16,
        17,
    ),
    Dot(
        19,
        20,
    ),
    Identifier(
        20,
        22,
    ),
    DecimalDigits(
        23,
        24,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        1,
        24,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                1,
                24,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        1,
                        24,
                    ),
                    kind: Call(
                        CallNode {
                            pos: (
                                1,
                                24,
                            ),
                            callee: ExprNode {
                                pos: (
                                    1,
                                    22,
                                ),
                                kind: MethodAccess {
                                    receiver: ExprNode {
                                        pos: (
                                            1,
                                            16,
                                        ),
                                        kind: Call(
                                            CallNode {
                                                pos: (
                                                    1,
                                                    16,
                                                ),
                                                callee: ExprNode {
                                                    pos: (
                                                        1,
                                                        14,
                                                    ),
                                                    kind: MethodAccess {
                                                        receiver: ExprNode {
                                                            pos: (
                                                                1,
                                                                6,
                                                            ),
                                                            kind: Literal(
                                                                LiteralNode {
                                                                    pos: (
                                                                        1,
                                                                        6,
                                                                    ),
                                                                    kind: Str(
                                                                        "hello",
                                                                    ),
                                                                },
                                                            ),
                                                            typ: Unknown,
                                                        },
                                                        method_parts: [
                                                            IdentifierNode {
                                                                pos: (
                                                                    12,
                                                                    14,
                                                                ),
                                                                name: "f1",
                                                            },
                                                        ],
                                                    },
                                                    typ: Unknown,
                                                },
                                                args: [
                                                    ExprNode {
                                                        pos: (
                                                            15,
                                                            16,
                                                        ),
                                                        kind: Literal(
                                                            LiteralNode {
                                                                pos: (
                                                                    15,
                                                                    16,
                                                                ),
                                                                kind: IntDecimal(
                                                                    1,
                                                                ),
                                                            },
                                                        ),
                                                        typ: Unknown,
                                                    },
                                                ],
                                                typ: Unknown,
                                            },
                                        ),
                                        typ: Unknown,
                                    },
                                    method_parts: [
                                        IdentifierNode {
                                            pos: (
                                                20,
                                                22,
                                            ),
                                            name: "f2",
                                        },
                                    ],
                                },
                                typ: Unknown,
                            },
                            args: [
                                ExprNode {
                                    pos: (
                                        23,
                                        24,
                                    ),
                                    kind: Literal(
                                        LiteralNode {
                                            pos: (
                                                23,
                                                24,
                                            ),
                                            kind: IntDecimal(
                                                2,
                                            ),
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ],
                            typ: Unknown,
                        },
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

