tests/src/snapshots/pluma_tests__parse_success__chain_field_access.snap
---
source: tests/src/parse_success.rs
expression: x . field1 . field2 . field3
---

=== Source ===
x . field1 . field2 . field3

=== Tokens ===
[
    Identifier(
        0,
        1,
    ),
    Dot(
        2,
        3,
    ),
    Identifier(
        4,
        10,
    ),
    Dot(
        11,
        12,
    ),
    Identifier(
        13,
        19,
    ),
    Dot(
        20,
        21,
    ),
    Identifier(
        22,
        28,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        28,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                28,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        28,
                    ),
                    kind: Chain {
                        receiver: ExprNode {
                            pos: (
                                0,
                                19,
                            ),
                            kind: Chain {
                                receiver: ExprNode {
                                    pos: (
                                        0,
                                        10,
                                    ),
                                    kind: Chain {
                                        receiver: ExprNode {
                                            pos: (
                                                0,
                                                1,
                                            ),
                                            kind: Identifier(
                                                IdentifierNode {
                                                    pos: (
                                                        0,
                                                        1,
                                                    ),
                                                    name: "x",
                                                    typ: Unknown,
                                                },
                                            ),
                                            typ: Unknown,
                                        },
                                        prop: ExprNode {
                                            pos: (
                                                4,
                                                10,
                                            ),
                                            kind: Identifier(
                                                IdentifierNode {
                                                    pos: (
                                                        4,
                                                        10,
                                                    ),
                                                    name: "field1",
                                                    typ: Unknown,
                                                },
                                            ),
                                            typ: Unknown,
                                        },
                                    },
                                    typ: Unknown,
                                },
                                prop: ExprNode {
                                    pos: (
                                        13,
                                        19,
                                    ),
                                    kind: Identifier(
                                        IdentifierNode {
                                            pos: (
                                                13,
                                                19,
                                            ),
                                            name: "field2",
                                            typ: Unknown,
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            },
                            typ: Unknown,
                        },
                        prop: ExprNode {
                            pos: (
                                22,
                                28,
                            ),
                            kind: Identifier(
                                IdentifierNode {
                                    pos: (
                                        22,
                                        28,
                                    ),
                                    name: "field3",
                                    typ: Unknown,
                                },
                            ),
                            typ: Unknown,
                        },
                    },
                    typ: Unknown,
                },
            ),
        },
    ],
}

